--- a/app/views/spree/admin/newsletter_subscribers/index.html.erb
+++ b/app/views/spree/admin/newsletter_subscribers/index.html.erb
@@ -1,10 +1,22 @@
-<div class="toolbar" data-hook="toolbar">
-  <ul class="actions">
-    <li>
-      <%= button_link_to t(:new_newsletter_subscriber), new_object_url, :icon => 'add' %>
-    </li>
-  </ul>
-  <br class="clear" />
+<div id="content-header" data-hook="">
+	<div class="container">
+		<div class="sixteen columns">
+			<div class="block-table">
+				<% content_for :page_title do %>
+					<%= Spree.t(:listing_newsletter_subscribers) %>
+				<% end %>
+				<div class="table-cell">
+					<h1 class="page-title ">Listando usuários</h1>
+				</div>
+				
+				<% content_for :page_actions do %>
+					<li id="new_newsletter_subscriber_link">
+						<%= button_link_to Spree.t(:new_newsletter_subscriber), new_object_url, { :remote => true, :icon => 'icon-plus', :id => 'admin_new_newsletter_subscriber' } %>
+					</li>
+				<% end %>
+			</div>
+		</div>
+	</div>
 </div>
 
 <h1><%= t(:newsletter_subscribers) %></h1>
