removing search admin index

--- a/app/views/spree/admin/newsletter_subscribers/index.html.erb
+++ b/app/views/spree/admin/newsletter_subscribers/index.html.erb
@@ -21,7 +21,7 @@
 	</colgroup>
 	<thead>
 		<tr data-hook="admin_newsletter_subscribers_index_headers">
-			<th><%= sort_link @search, :email, t(:newsletter_subscribers), {}, {:title => 'newsletter_subscribers_email_title'} %></th>
+			<th><%= t(:newsletter_subscribers) %></th>
 			<th data-hook="admin_newsletter_subscribers_index_header_actions" class="actions"></th>
 		</tr>
 	</thead>
